--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -1,2 +1,8 @@
-<%= link_to "Register", "/users/new" %>
+<% if current_user %>
+  <%= link_to "Log out" %>
+<% else %>
+  <%= link_to "Register", "/users/new" %>
+  <%= link_to "Log In", "/login" %>
+<% end %>
+
 <h1><%= @campaign.name %></h1>
