--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,13 @@
     <% flash.each do |type, message| %>
       <p><%= message %></p>
     <% end %>
+    <% if current_user %>
+      <%= link_to "Log Out", "/logout", method: "delete" %>
+    <% else %>
+      <%= link_to "Register", "/users/new" %>
+      <%= link_to "Log In", "/login" %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
