--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,9 @@
-<h1>Hello, <%= @user.username %>!</h1>
+<h2>Current Campaign: <%= current_campaign.name %></h2>
+
+<h2> Characters </h2>
+
+<% @user.characters.each do |character| %>
+  <ul>
+    <li> <%= character.name %></li>
+  </ul>
+<% end %>
