--- a/app/views/monsters/index.html.erb
+++ b/app/views/monsters/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Monsters</h1>
 
 <% @monsters.each do |monster| %>
-  <p><%= monster.name %></p>
+  <p><%= link_to monster.name, monster_path(monster) %></p>
 <% end %>
