--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -1,4 +1,3 @@
-
-<h1><%= current_campaign.name %></h1>
+<h1><% if current_campaign %><%= current_campaign.name %><% else %>Welcome to the Cobalt Reserve!<% end %></h1>
 
 <%= link_to "Monster Database", monsters_path %>
