--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,6 +13,6 @@
 
   <%= label_tag :email %>
   <%= text_field_tag :email %>
-  <%= submit_tag "Create User" %>
+  <%= submit_tag 'Create User' %>
 <% end %>
 
