--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -1,4 +1,4 @@
 
 <h1><%= current_campaign.name %></h1>
 
-<%= link_to "Monster Database", monsters_path %>
+<%= link_to 'Monster Database', monsters_path %>
