changed passwordless system to username, closes #37

--- a/app/views/authentication_mailer/send_login_email.html.erb
+++ b/app/views/authentication_mailer/send_login_email.html.erb
@@ -1,2 +1,2 @@
-<p>Hail, <%= @character.name %>. The Cobalt Reserve awaits your presence.</p>
-<p><a href="http://cobalt-reserve.com/auth/<%= @uuid %>">Click here to return to the Cobalt Reserve</a>. This link expires in 10 minutes.</p>
+<p>Hail, <%= @user.username %>. The Cobalt Reserve awaits your return.</p>
+<p><a href="http://cobalt-reserve.com/auth/<%= @uuid %>">Click here to log in to the Cobalt Reserve</a>. This link expires in 10 minutes.</p>
