--- a/app/views/authentication_mailer/send_login_email.text.erb
+++ b/app/views/authentication_mailer/send_login_email.text.erb
@@ -1,5 +1,5 @@
-Hail, <%= @character.name %>. The Cobalt Reserve awaits your presence.
+Hail, <%= @user.username %>. The Cobalt Reserve awaits your return.
 
-Please click the following link to return to the Cobalt Reserve. This link expires in 10 minutes.
+Please click the following link to log in to the Cobalt Reserve. This link expires in 10 minutes.
 
 http://cobalt-reserve.com/auth/<%= @uuid %>
