Add character index link to home page

--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -1,3 +1,5 @@
 <h1><% if current_campaign %><%= current_campaign.name %><% else %>Welcome to the Cobalt Reserve!<% end %></h1>
 
 <%= link_to 'Monster Database', monsters_path %>
+
+<%= link_to 'Character Index', characters_path %>
