--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>CobaltReserve</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,17 +12,44 @@
   </head>
 
   <body>
-    <% flash.each do |type, message| %>
-      <p><%= message %></p>
-    <% end %>
-    <% if current_user %>
-      <%= link_to 'Log Out', '/logout', method: 'delete' %>
-    <% else %>
-      <%= link_to 'Register', '/users/new' %>
-      <%= link_to 'Log In', '/login' %>
-      <%= link_to 'Passwordless Login', passwordless_login_path %>
-    <% end %>
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/">Cobalt Reserve</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <%= yield %>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <% if current_user %>
+            <li class="nav-item"><%= link_to 'Log Out', logout_path, method: 'delete', class: 'nav-link' %></li>
+          <% else %>
+            <li class="nav-item"><%= link_to 'Register', users_new_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to 'Log In', login_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to 'Passwordless Log In', passwordless_login_path, class: 'nav-link' %></li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+      <% flash.each do |type, message| %>
+      <p><%= message %></p>
+      <% end %>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-">
+      <%= yield %>
+    </div>
+    </div>
+  </div>
+
   </body>
 </html>
