--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,7 @@
-<h2>Current Campaign: <%= current_campaign.name %></h2>
+<h1>Current Campaign: <%= current_campaign.name %></h1>
 
-<h2> Characters </h2>
+<h2>Characters</h2>
 
-<% @user.characters.each do |character| %>
-  <ul>
-    <li> <%= character.name %></li>
-  </ul>
-<% end %>
+<ul><% @user.characters.each do |character| %>
+  <li><%= character.name %></li>
+<% end %></ul>
