Add password confirmation

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,11 @@
   </p>
 
   <p>
+  <%= label_tag :password_confirmation %>
+  <%= text_field_tag :password_confirmation %>
+  </p>
+
+  <p>
   <%= label_tag :first_name %>
   <%= text_field_tag :first_name %>
   </p>
