Fix character form so species and class populate when editing

--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -23,12 +23,12 @@
 
   <div class="field">
     <%= f.label 'Species' %>
-    <%= f.select 'species', options_for_select(@species), {required: true} %>
+    <%= f.select 'species', options_for_select(@species, @character.species), {required: true} %>
   </div>
 
   <div class="field">
     <%= f.label 'Class' %>
-    <%= f.select 'character_class', options_for_select(@classes), {required: true} %>
+    <%= f.select 'character_class', options_for_select(@classes, @character.character_class), {required: true} %>
   </div>
 
   <div class="field">
