--- a/app/views/application/_character.html.erb
+++ b/app/views/application/_character.html.erb
@@ -4,7 +4,9 @@
       <%= character.name %>
     </h5>
     <h6 class="card-subtitle mb-2 text-muted">
-      <p><%= character.species %> <%= character.character_class %></p>
+      <p class="ancestry">Ancestry: <%= character.build_ancestry %></p>
+      <p class="culture">Culture: <%= character.culture.name %></p>
+      <p class="klass">Class: <%= character.klass %></p>
     </h6>
     <p>Level: <%= character.level %></p>
     <p>Active: <%= character.active %></p>
