--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,5 +1,1 @@
-<%= @character.name %>
-<%= @character.species %>
-<%= @character.level %>
-<%= @character.character_class %>
-<%= link_to 'D&D Beyond', @character.dndbeyond_url %>
+<%= render partial: "character", locals: { character: @character } %>
