Add controller action, view, route, and partial for game session index

--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -7,4 +7,7 @@
   <li>
     <%= link_to 'Character Index', characters_path %>
   </li>
+  <li>
+    <%= link_to 'Game Session Index', game_sessions_path %>
+  </li>
 </ul>
