Adds foundry key management for admins

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,3 +1,5 @@
 <h1>Admin Dashboard</h1>
 
-<%= link_to 'Create Session', '/admin/game_sessions/new' %>
+<p><%= link_to 'Create Session', '/admin/game_sessions/new' %></p>
+
+<p><%= link_to 'Foundry Key Management', '/admin/foundry_key' %></p>
