Programming is the worst

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -3,3 +3,5 @@
 <p><%= link_to 'Create Session', '/admin/game_sessions/new' %></p>
 
 <p><%= link_to 'Foundry Key Management', '/admin/foundry_key' %></p>
+
+<p><%= link_to 'Create World News Item', new_admin_world_news_path %></p>
