--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -15,9 +15,9 @@
 <section id="world-news">
   <% if current_campaign && !current_campaign.world_news.empty? %>
 
-    <p><%= current_campaign.world_news.last.title %></p>
-    <p><%= current_campaign.world_news.last.date %></p>
-    <p><%= current_campaign.world_news.last.body %></p>
+    <p><%= current_campaign.world_news.most_recently_created.title %></p>
+    <p><%= current_campaign.world_news.most_recently_created.date %></p>
+    <p><%= current_campaign.world_news.most_recently_created.body %></p>
 
   <% end %>
 </section>
