Finishes world-news admin

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -4,4 +4,7 @@
 
 <p><%= link_to 'Foundry Key Management', '/admin/foundry_key' %></p>
 
+<p><%= link_to 'World News Management', admin_world_news_index_path %></p>
+
 <p><%= link_to 'Create World News Item', new_admin_world_news_path %></p>
+
