--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -19,6 +19,7 @@
     <p><%= current_campaign.world_news.most_recently_created.date %></p>
     <p><%= current_campaign.world_news.most_recently_created.body %></p>
 
+    <p><%= link_to 'World News Archive', world_news_index_path %></p>
   <% end %>
 </section>
 
