--- a/app/views/world_news/index.html.erb
+++ b/app/views/world_news/index.html.erb
@@ -1,7 +1,7 @@
 <h1>World News Archive </h1>
 
 <% @world_news.each do |news| %>
-  <p id="news- %= news.id %>">
+  <p id="news-<%= news.id %>">
   <%= news.date %> - <%= news.title %> -
   <%= link_to 'Details', world_news_path(news) %>
   </p>
