map history complete

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -8,3 +8,5 @@
 
 <p><%= link_to 'Create World News Item', new_admin_world_news_path %></p>
 
+<p><%= link_to 'Add New World Map', admin_world_maps_new_path %></p>
+
