--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -16,6 +16,7 @@
   <% if current_campaign && !current_campaign.world_maps.empty? %>
     <p><%= image_tag current_campaign.latest_low_res %></p>
     <center><%= link_to 'High Res Version', current_campaign.latest_high_res %></center>
+    <center><p><%= link_to 'Map History', world_maps_path%></p></center>
   <% end %>
 </section>
 
