adds local:true to all form_with forms

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Admin Dashboard</h1>
 
-<p><%= link_to 'Create Session', '/admin/game_sessions/new' %></p>
+<p><%= link_to 'Create Game Session', '/admin/game_sessions/new' %></p>
 
 <p><%= link_to 'Foundry Key Management', '/admin/foundry_key' %></p>
 
