--- a/app/views/admin/world_news/new.html.erb
+++ b/app/views/admin/world_news/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create World News</h1>
 
-<%= form_with model: @world_news, url: admin_world_news_index_path do |form| %>
+<%= form_with model: @world_news, url: admin_world_news_index_path, local: true do |form| %>
   <%= form.label :title %>
   <%= form.text_field :title %>
 
