Basic admin campaign crud functionality

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -10,3 +10,5 @@
 
 <p><%= link_to 'Add New World Map', admin_world_maps_new_path %></p>
 
+<p><%= link_to 'Campaign Management', admin_campaigns_path %></p>
+
