Add total best logs statistic to character show page

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -4,6 +4,12 @@
   <p><b>Foundry Key:</b> <%= @character.foundry_key %></p>
 <% end %>
 
+<h2>Statistics</h2>
+
+<p>
+  Times Awarded Best Adventure Log: <%= @character.total_best_logs %>
+</p>
+
 <h2>Backstory</h2>
 
 <p>Age: <%= @character.age %> </p>
