--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,30 @@
 <h1> User Management </h1>
 
-<% @users.each do |user| %>
-  <p><%= user.id %> - <%= user.username %> - <%= user.first_name %> - <%= user.last_name %> - <%= user.email %></p>
-<% end %>
+<table class="table table-striped table-bordered table-hover table-responsive">
+  <thead class="thead-light">
+    <tr>
+      <th scope="col">id</th>
+      <th scope="col">Username</th>
+      <th scope="col">First Name</th>
+      <th scope="col">Last Name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Actions</th>
+    </tr>
+  </thead>
 
+  <tbody>
+    <% @users.each do |user| %>
+      <tr id="user-<%= user.id %>">
+        <th scope="row"><%= user.id %></th>
+        <td><%= user.username %></td>
+        <td><%= user.first_name %></td>
+        <td><%= user.last_name %></td>
+        <td><%= user.email %></td>
+        <td>
+          <%= button_to 'Details', admin_user_path(user), method: :get, class: 'btn btn-primary btn-sm' %>
+        </td>
+      </tr>
+    <% end %>
+
+  </tbody>
+</table>
