--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -8,7 +8,7 @@
 
 <p>
 <% if @user.active %>
-  <%= button_to 'Disable User', admin_user_status_path(@user), method: :patch, class: 'btn btn-danger' %>
+  <%= button_to 'Disable User', admin_user_status_path(@user), method: :patch, class: 'btn btn-danger', data: { confirm: 'Are you sure?' } %>
 <% else %>
   <%= button_to 'Enable User', admin_user_status_path(@user), method: :patch, class: 'btn btn-success' %>
 <% end %>
