--- a/app/views/authentication_mailer/send_login_email.text.erb
+++ b/app/views/authentication_mailer/send_login_email.text.erb
@@ -2,4 +2,4 @@ Hail, <%= @user.username %>. The Cobalt Reserve awaits your return.
 
 Please click the following link to log in to the Cobalt Reserve. This link expires in 10 minutes.
 
-http://cobalt-reserve.com/auth/<%= @uuid %>
+http://cobalt-reserve.herokuapp.com/auth/<%= @uuid %>
