modifies some colors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
     <%= javascript_pack_tag 'application' %>
   </head>
 
-  <body>
+  <body style="background-color:#f6e7ce;">
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">Cobalt Reserve</a>
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#0e545b;">
+      <a class="navbar-brand text-light" href="/">Cobalt Reserve</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
