got map to center, added a map seed

--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -1,12 +1,10 @@
-<h1 class="campaign-name text-center">
-  <center>
+<div class="container h1 text-center">
   <% if current_campaign %>
     <%= current_campaign.name %>
   <% else %>
     Welcome to the Cobalt Reserve!
   <% end %>
-  </center>
-</h1>
+</div>
 
 <ul>
   <li>
@@ -21,11 +19,15 @@
 </ul>
 
 <section id="world-map">
-  <% if current_campaign && !current_campaign.world_maps.empty? %>
-    <p><%= image_tag current_campaign.latest_low_res %></p>
-    <center><%= link_to 'High Res Version', current_campaign.latest_high_res %></center>
-    <center><p><%= link_to 'Map History', world_maps_path%></p></center>
-  <% end %>
+  <div class="container">
+    <% if current_campaign && !current_campaign.world_maps.empty? %>
+      <p><%= image_tag current_campaign.latest_low_res, class: "rounded mx-auto d-block" %></p>
+  </div>
+  <div class="container">
+    <center><p><%= link_to 'High Res Version', current_campaign.latest_high_res, class: "btn btn-primary" %></p></center>
+    <center><p><%= link_to 'Map History', world_maps_path, class: "btn btn-secondary" %></p></center>
+  </div>
+<% end %>
 </section>
 
 
