--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,36 +1,38 @@
-<%= form_tag "/users", method: :post do %>
-  <p>
-    <%= label_tag :username %>
-    <%= text_field_tag :username %>
-  </p>
+<div class="container">
+  <%= form_tag "/users", method: :post do %>
+    <div class="form-group">
+      <%= label_tag :username, 'Username:' %>
+      <%= text_field_tag :username, '', placeholder: 'Username', class: 'form-control'%>
+    </div>
 
-  <p>
-  <%= label_tag :password %>
-  <%= text_field_tag :password %>
-  </p>
+    <div class="form-group">
+      <%= label_tag :password, 'Password:' %>
+      <%= password_field_tag :password, '', class: 'form-control' %>
+    </div>
 
-  <p>
-  <%= label_tag :password_confirmation %>
-  <%= text_field_tag :password_confirmation %>
-  </p>
+    <div class="form-group">
+      <%= label_tag :password_confirmation, 'Password Confirmation:'%>
+      <%= password_field_tag :password_confirmation, '', class: 'form-control' %>
+    </div>
 
-  <p>
-  <%= label_tag :first_name %>
-  <%= text_field_tag :first_name %>
-  </p>
+    <div class="form-group">
+      <%= label_tag :first_name, 'First Name:' %>
+      <%= text_field_tag :first_name, '', placeholder: 'First Name', class: 'form-control' %>
+    </div>
 
-  <p>
-  <%= label_tag :last_name %>
-  <%= text_field_tag :last_name %>
-  </p>
+    <div class="form-group">
+      <%= label_tag :last_name, 'Last Name:' %>
+      <%= text_field_tag :last_name, '', placeholder: 'Last Name', class: 'form-control' %>
+    </div>
 
-  <p>
-  <%= label_tag :email %>
-  <%= text_field_tag :email %>
-  </p>
+    <div class="form-group">
+      <%= label_tag :email, 'Email:' %>
+      <%= text_field_tag :email, '', placeholder: 'Email Address', class: 'form-control' %>
+    </div>
 
-  <p>
-  <%= submit_tag 'Create User' %>
-  </p>
-<% end %>
+    <div class="form-group">
+    <%= submit_tag 'Create User', class: 'form-control btn btn-primary' %>
+    </div>
+  <% end %>
 
+</div>
