--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,11 +34,16 @@
             <% end %>
             <% if current_user %>
               <li class="nav-item"><%= link_to 'Profile', profile_path, class: 'nav-link' %></li>
+              <li class="nav-item"><%= link_to 'MonsterDB', monsters_path, class: 'nav-link' %></li>
+              <li class="nav-item"><%= link_to 'Characters', characters_path, class: 'nav-link' %></li>
+              <li class="nav-item"><%= link_to 'Game Sessions', game_sessions_path, class: 'nav-link' %></li>
               <li class="nav-item"><%= link_to 'Log Out', logout_path, method: 'delete', class: 'nav-link' %></li>
             <% else %>
               <li class="nav-item"><%= link_to 'Register', new_user_path, class: 'nav-link' %></li>
               <li class="nav-item"><%= link_to 'Log In', login_path, class: 'nav-link' %></li>
               <li class="nav-item"><%= link_to 'Passwordless Log In', passwordless_login_path, class: 'nav-link' %></li>
+              <li class="nav-item"><%= link_to 'Characters', characters_path, class: 'nav-link' %></li>
+              <li class="nav-item"><%= link_to 'Game Sessions', game_sessions_path, class: 'nav-link' %></li>
             <% end %>
           </ul>
         </div>
