--- a/app/views/application/_game_session.html.erb
+++ b/app/views/application/_game_session.html.erb
@@ -1,10 +1,22 @@
-<div class="card">
+<div class="card" style="background-color:#f6e7ce;">
   <div class="card-body" id="game_session_-<%= game_session.id %>">
     <h5 class="card-title">
       <%= link_to game_session.name, game_session_path(game_session) %>
     </h5>
     <h6 class="card-subtitle mb-2 text-muted">
       <p class="ancestry">Date: <%= game_session.date.strftime("%D") %></p>
-    </h6> 
+    </h6>
+    <p class="h5">Characters:</p>
+    <div class="col-sm-4">
+    <ul class="list-group">
+      <% game_session.characters.each do |character| %>
+        <li class="list-group-item d-flex justify-content-between align-items-center" style="background-color:#f6e7ce;">
+          <%= link_to character.name, character_path(character) %>
+          <span class="badge badge-primary badge-pill"><%= character.level %></span>
+        </li>
+      <% end %>
+    </ul>
+    </div>
+
   </div>
 </div>
