adds play link and fixes tests

--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -47,6 +47,6 @@
       </div>
 
       <div class="field">
-        <%= f.submit 'Create Character', class: 'btn btn-primary btn-block mt-2' %>
+        <%= f.submit text, class: 'btn btn-primary btn-block mt-2' %>
       </div>
     <% end %>
