--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,2 +1,2 @@
 <h1>Edit a Character</h1>
-<%= render 'form', user: @user, character: @character %>
+<%= render 'form', user: @user, character: @character, text: 'Update Character' %>
