--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -4,5 +4,5 @@
       <h1>Create a Character</h1>
     </div>
   </div>
-  <%= render 'form', user: @user, character: @character %>
+  <%= render 'form', user: @user, character: @character, text: 'Create Character' %>
 </div>
