--- a/app/views/authentication_mailer/send_login_email.text.erb
+++ b/app/views/authentication_mailer/send_login_email.text.erb
@@ -1,5 +1,5 @@
-Hail, <%= @user.username %>. The Cobalt Reserve awaits your return.
+Hail, <%= @user.username %>. Turing West Marches awaits your return.
 
-Please click the following link to log in to the Cobalt Reserve. This link expires in 10 minutes.
+Please click the following link to log in to Turing West Marches. This link expires in 10 minutes.
 
-http://cobalt-reserve.herokuapp.com/auth/<%= @uuid %>
+http://turingwestmarches.com/auth/<%= @uuid %>
