--- a/app/views/authentication_mailer/send_login_email.html.erb
+++ b/app/views/authentication_mailer/send_login_email.html.erb
@@ -1,2 +1,2 @@
-<p>Hail, <%= @user.username %>. The Cobalt Reserve awaits your return.</p>
-<p><a href="http://cobalt-reserve.herokuapp.com/auth/<%= @uuid %>">Click here to log in to the Cobalt Reserve</a>. This link expires in 10 minutes.</p>
+<p>Hail, <%= @user.username %>. Turing West Marches awaits your return.</p>
+<p><a href="http://turingwestmarches.com/auth/<%= @uuid %>">Click here to log in to Turing West Marches</a>. This link expires in 10 minutes.</p>
