--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,14 @@
       </div>
     </div>
 
-    <%= yield %>
+
+    <div class="container" id="main">
+      <div class="row">
+        <div class="col-xl">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
