--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
 <% end %>
 
 <%= render(partial: "character", collection: @character_list) || render(partial: "empty_list") %>
+<br style="clear: both">
 <p>
   <%= button_to 'Disable Account', status_path(current_user), method: :patch, class: 'btn btn-danger', data: { confirm: 'Are you sure? This will log you out and deactivate your account.' } %>
 </p>
