--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,3 +1,8 @@
-<h1>Campaign Characters</h1>
+<div class="row">
+  <div class="col-xl">
+    <h1>Campaign Characters</h1>
 
 <%= render(partial: "character", collection: @character_list) || render(partial: "empty_list") %>
+
+  </div>
+</div>
